--- a/react-app/src/components/AppUI/NavBar/Navigation.css
+++ b/react-app/src/components/AppUI/NavBar/Navigation.css
@@ -82,7 +82,7 @@
 	background-color: white;
 	width: 100%;
 	border-radius: 5px;
-	display: none;
+	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	color: black;
@@ -103,6 +103,18 @@
 	display: flex;
 	flex-direction: row;
 	align-items: center;
+}
+
+.searchAll_user-photo{
+	width: 28px;
+	height: 28px;
+	font-size: 100%;
+	margin-right: 5px;
+}
+
+.searchAll__channel-item:before{
+	content: '\1F3E0';
+
 }
 
 .searchAll__secondary-info{
