--- a/react-app/src/components/AppUI/Content/Content.css
+++ b/react-app/src/components/AppUI/Content/Content.css
@@ -78,14 +78,15 @@
 	display: grid;
 	grid-template-rows: 1fr 155px;
 
-	height: 90vh;
+	height: 100%;
 	width: 100%;
 }
 
 .main__chat {
-	padding: 10px;
+	position: absolute;
+	top: 0;
+	bottom: 155px;
 	width: 100%;
-	height: 100%;
 	display: flex;
 	flex-direction: column-reverse;
 	overflow-y: auto;
@@ -96,7 +97,7 @@
 	grid-template-columns: 55px 1fr;
 	margin: 5px 0;
 	position: relative;
-	padding: 5px;
+	padding:  5px 15px;
 	width: 100%;
 	animation: fadeIn 0.5s;
 }
@@ -166,7 +167,7 @@
 .chat_edit-btn,
 .chat__delete-btn {
 	font-size: 17px;
-	margin: 5px;
+	margin: 5px 7.5px;
 	color: grey;
 }
 
