updated search edit, and some css

--- a/react-app/src/components/AppUI/NavBar/Navigation.css
+++ b/react-app/src/components/AppUI/NavBar/Navigation.css
@@ -82,7 +82,7 @@
 	background-color: white;
 	width: 100%;
 	border-radius: 5px;
-	display: flex;
+	display: none;
 	flex-direction: column;
 	justify-content: center;
 	color: black;
