--- a/react-app/src/components/AppUI/NavBar/Navigation.css
+++ b/react-app/src/components/AppUI/NavBar/Navigation.css
@@ -19,6 +19,13 @@
 	border-radius: 5px;
 }
 
+.main-nav-home__div{
+	display: flex;
+	align-items: center;
+	width: 100%;
+	height: 100%;
+}
+
 .main-nav-home{
 	display: block;
 	padding: 10px 17px;
@@ -31,6 +38,13 @@
 .fa-home {
 	color: #fff;
 }
+
+/* ABOUT */
+.main-nav__about{
+	color: #fff;
+	cursor: pointer;
+}
+
 
 /* SEARCH */
 .nav-search {
