5. put the X for dm user inside of the blue highlight so its consistent with channels

--- a/react-app/src/components/AppUI/SideBar/DMs.css
+++ b/react-app/src/components/AppUI/SideBar/DMs.css
@@ -118,20 +118,19 @@
 	margin-left: auto;
 	z-index: 100;
 	text-align: center;
-	
+
 }
 
 .x {
 	display: none;
 }
 
-.remove-dm:hover .x {
+.dm__li:hover .x {
 	display:block;
-	
+
 }
 
 .dm__li {
 	display: flex;
 	flex-direction: row;
 }
-
