--- a/react-app/src/components/AppUI/Content/Content.css
+++ b/react-app/src/components/AppUI/Content/Content.css
@@ -61,6 +61,10 @@
 	margin-right: 10px;
 }
 
+.fa-users{
+	cursor: initial;
+}
+
 .main__channel-members i,
 .main_channel-members-h3 {
 	font-size: 14px;
