changed alex headshot

--- a/react-app/src/components/Splash/Splash.css
+++ b/react-app/src/components/Splash/Splash.css
@@ -18,6 +18,11 @@
     font-weight: 600
 }
 
+.alex-shot {
+    height: 175px;
+    width: 175px;
+}
+
 #slack_logo{
     font-size: 60px;
     width:45px;
