removed css rule

--- a/react-app/src/components/Splash/Splash.css
+++ b/react-app/src/components/Splash/Splash.css
@@ -18,10 +18,10 @@
     font-weight: 600
 }
 
-.alex-shot {
+/* .alex-shot {
     height: 175px;
     width: 175px;
-}
+} */
 
 #slack_logo{
     font-size: 60px;
